--- a/report/report.html
+++ b/report/report.html
@@ -189,8 +189,8 @@ function showOutput(id, name) {
 
 <div class='heading'>
 <h1>Discuz测试</h1>
-<p class='attribute'><strong>Start Time:</strong> 2019-03-01 19:12:45</p>
-<p class='attribute'><strong>Duration:</strong> 0:02:49.347235</p>
+<p class='attribute'><strong>Start Time:</strong> 2019-03-19 09:35:09</p>
+<p class='attribute'><strong>Duration:</strong> 0:02:07.685730</p>
 <p class='attribute'><strong>Status:</strong> Pass 4</p>
 
 <p class='description'>Discuz主要流程测试</p>
@@ -231,7 +231,7 @@ function showOutput(id, name) {
 </tr>
 
 <tr id='pt1.1' class='hiddenRow'>
-    <td class='none'><div class='testcase'>test_login_post_reoly: 第一个业务流程场景</div></td>
+    <td class='none'><div class='testcase'>test_login_post_reoly: 业务流程</div></td>
     <td colspan='5' align='center'>
 
     <!--css div popup start-->
